--- a/oeaw_ontology.info.yml
+++ b/oeaw_ontology.info.yml
@@ -1,7 +1,7 @@
 name: oeaw_ontology
 type: module
 description: 'oeaw ontology table for ckeditor.'
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 package: CKEdtior
 dependencies:
 - ckeditor
